chrome JSON support

--- a/bits.html
+++ b/bits.html
@@ -1,3 +1,4 @@
 <html>
+  <script type="text/javascript" src="js/handler.js"></script>
   <script type="text/javascript" src="js/bits.js"></script>
 </html>
