JS code normalization

--- a/bits.html
+++ b/bits.html
@@ -1,4 +1,5 @@
 <html>
   <script type="text/javascript" src="js/handler.js"></script>
+  <script type="text/javascript" src="js/chromeHandler.js"></script>
   <script type="text/javascript" src="js/bits.js"></script>
 </html>
