Removing exec permissions from source code

--- a/bits.html
+++ b/bits.html
@@ -1,4 +1,6 @@
 <html>
+  <script type="text/javascript" src="js/module.js"></script>
+  <script type="text/javascript" src="js/debug.js"></script>
   <script type="text/javascript" src="js/handler.js"></script>
   <script type="text/javascript" src="js/chromeHandler.js"></script>
   <script type="text/javascript" src="js/bits.js"></script>
